# csharp-proto-compiler

./: Cargo.toml  README.md
src/: args.rs  main.rs  proto_file.rs  protoc.rs
