[package]
name = "csharp-proto-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
heck = "0.4.0"
regex = "1.7.0"
lazy_static = "1.4.0"

[dependencies.clap]
version = "4.0.29"
features = ["derive"]
